<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.detail.DeskripsiFragment"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:id="@+id/tableLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:stretchColumns="1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/klasifikasi" />

                <TextView
                    android:id="@+id/tv_klasifikasi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/klasifikasi"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/derajat" />

                <TextView
                    android:id="@+id/tv_derajat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/derajat"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/nomor_agenda" />

                <TextView
                    android:id="@+id/tv_nomor_agenda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/nomor_agenda"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/diterima_tgl" />

                <TextView
                    android:id="@+id/tv_diterima_tgl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:maxLines="2"
                    android:padding="6dip"
                    android:text="@string/diterima_tgl"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/tanggal_surat" />

                <TextView
                    android:id="@+id/tv_tgl_surat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/tanggal_surat"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/surat_dari" />

                <TextView
                    android:id="@+id/tv_surat_dari"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:maxLines="3"
                    android:padding="6dip"
                    android:text="@string/surat_dari"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/nomor_surat" />

                <TextView
                    android:id="@+id/tv_nomor_surat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/nomor_surat"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/perihal" />

                <TextView
                    android:id="@+id/tv_perihal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="6dip"
                    android:text="@string/perihal"
                    android:textStyle="bold" />
            </TableRow>
            <TableRow>

                <TextView
                    android:padding="6dip"
                    android:text="@string/isi_disposisi" />

                <TextView
                    android:id="@+id/tv_isi_disposisi"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:maxLines="10"
                    android:padding="6dip"
                    android:text="@string/isi_disposisi"
                    android:textStyle="bold" />
            </TableRow>

            <TableRow>
                <TextView
                    android:padding="6dip"
                    android:text="@string/diteruskan_kepada" />

                <TextView
                    android:id="@+id/tv_diteruskan_kepada"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:maxLines="10"
                    android:padding="6dip"
                    android:text="@string/diteruskan_kepada"
                    android:textStyle="bold" />
            </TableRow>
        </TableLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>